--- a/css/main.css
+++ b/css/main.css
@@ -149,9 +149,70 @@ h1.company-name {
   font-size: 2.3rem;
   text-transform: capitalize;
   text-decoration: none;
+  color: rgb(21, 20, 20);
 }
 .nav__link:hover {
-  color: gold;
+  color: rgb(136, 28, 140);
+}
+
+.cards {
+  background-color: rgb(178, 178, 215);
+  overflow: hidden;
+}
+.cards__box {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  gap: 2em;
+  padding: 6em 2em;
+}
+.cards__card {
+  position: relative;
+  display: grid;
+  justify-items: center;
+  padding: 3em;
+  text-align: center;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  background-color: rgb(129, 139, 182);
+  transition: background-color 0.3s border 0.3s;
+  z-index: 5;
+}
+.cards__card:hover {
+  background-color: rgb(160, 129, 164);
+  border: 1px solid red;
+  z-index: 1;
+}
+.cards__card::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  border: 1px solid red;
+  border-radius: 8px;
+  opacity: 0;
+}
+.cards__card:hover::before {
+  animation: pulse 1s;
+}
+.cards__card img {
+  margin-bottom: 1em;
+  width: 60px;
+}
+.cards__card h3 {
+  margin-bottom: 0.6em;
+  text-transform: uppercase;
+}
+.cards__card--one {
+  grid-row: 1/2;
+  grid-column: 1/-1;
+}
+.cards__card--two {
+  grid-row: 2/3;
+  grid-column: 1/-1;
+}
+.cards__card--three {
+  grid-row: 3/4;
+  grid-column: 1/-1;
 }
 
 @media (min-width: 992px) {
@@ -171,6 +232,7 @@ h1.company-name {
   .header__img {
     grid-row: 1/4;
     grid-column: 2/3;
+    background-image: url(../img/headlg.jpg);
   }
   .header__arrow {
     display: block;
@@ -227,7 +289,7 @@ h1.company-name {
     content: "";
     width: 100%;
     height: 100%;
-    border: 1px solid gold;
+    border: 1px solid rgb(136, 28, 140);
     opacity: 0;
   }
   .nav__link:hover::before {
@@ -240,5 +302,22 @@ h1.company-name {
 @media (min-width: 1200px) {
   .header__text p {
     font-size: 2.2rem;
+  }
+}
+@media (min-width: 768px) {
+  .cards__box {
+    padding: 10em 2em;
+  }
+  .cards__card--one {
+    grid-column: 1/4;
+    grid-row: 1/2;
+  }
+  .cards__card--two {
+    grid-column: 4/7;
+    grid-row: 1/2;
+  }
+  .cards__card--three {
+    grid-column: 7/10;
+    grid-row: 1/2;
   }
 }/*# sourceMappingURL=main.css.map */
