--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,28 @@ h1.company-name {
   width: 100%;
 }
 
+.section-title {
+  position: relative;
+  margin: 0 auto 2em;
+  font-size: 3.2rem;
+  color: rgba(79, 138, 190, 0.548);
+  font-weight: 200;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.section-title::before {
+  position: absolute;
+  bottom: -0.1em;
+  left: 0;
+  width: 40px;
+  height: 2px;
+  background-color: rgba(79, 138, 190, 0.548);
+  content: "";
+}
+.section-title span {
+  font-weight: 600;
+}
+
 .header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -152,11 +174,11 @@ h1.company-name {
   color: rgb(21, 20, 20);
 }
 .nav__link:hover {
-  color: rgb(136, 28, 140);
+  color: rgba(79, 138, 190, 0.548);
 }
 
 .cards {
-  background-color: rgba(178, 178, 215, 0.707);
+  background-color: rgba(68, 180, 241, 0.467);
   overflow: hidden;
 }
 .cards__box {
@@ -173,12 +195,12 @@ h1.company-name {
   text-align: center;
   border: 1px solid transparent;
   border-radius: 8px;
-  background-color: rgba(120, 112, 168, 0.171);
+  background-color: rgba(149, 138, 214, 0.596);
   transition: background-color 0.3s border 0.3s;
   z-index: 5;
 }
 .cards__card:hover {
-  background-color: rgba(74, 88, 130, 0.39);
+  background-color: rgba(96, 122, 201, 0.595);
   z-index: 1;
 }
 .cards__card::before {
@@ -186,7 +208,7 @@ h1.company-name {
   content: "";
   width: 100%;
   height: 100%;
-  border: 1px solid rgb(136, 28, 140);
+  border: 1px solid rgba(79, 138, 190, 0.548);
   border-radius: 8px;
   opacity: 0;
 }
@@ -214,7 +236,56 @@ h1.company-name {
   grid-column: 1/-1;
 }
 
+.info {
+  position: relative;
+  display: grid;
+  grid-template-areas: "title" "box" "box";
+  padding: 6em 2em;
+}
+.info__title {
+  grid-area: title;
+}
+.info__boxes {
+  grid-area: box;
+}
+.info__box-img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: grayscale(1);
+}
+.info__box-title {
+  margin: 0.3em 0;
+  font-size: 2.6rem;
+  color: rgba(79, 138, 190, 0.548);
+  font-weight: 400;
+}
+.info__box-text {
+  margin-bottom: 0.5em;
+}
+.info__bg-icon {
+  display: none;
+}
+.info__box-link {
+  display: block;
+  margin-bottom: 2em;
+  font-weight: bold;
+  color: rgba(79, 138, 190, 0.548);
+  text-decoration: none;
+  text-align: right;
+  transition: color 0.3s;
+}
+.info__box-link:hover {
+  color: rgba(149, 138, 214, 0.596);
+}
+
 @media (min-width: 992px) {
+  .section-title {
+    font-size: 4.8rem;
+  }
+  .section-title::before {
+    height: 4px;
+  }
   h1.company-name {
     font-size: 6rem;
   }
@@ -288,7 +359,7 @@ h1.company-name {
     content: "";
     width: 100%;
     height: 100%;
-    border: 1px solid rgb(136, 28, 140);
+    border: 1px solid rgba(96, 122, 201, 0.595);
     opacity: 0;
   }
   .nav__link:hover::before {
@@ -318,5 +389,50 @@ h1.company-name {
   .cards__card--three {
     grid-column: 7/10;
     grid-row: 1/2;
+  }
+}
+@media (min-width: 576px) {
+  .info {
+    grid-template-areas: "title box" "title box" "title box";
+    padding: 10em 2em;
+  }
+  .info__box {
+    display: grid;
+    justify-content: end;
+  }
+  .info__title {
+    padding: 0 1em;
+  }
+  .info__box-img, .info__box-text {
+    max-width: 500px;
+  }
+  .info__bg-icon {
+    position: absolute;
+    display: block;
+    opacity: 0.05;
+    z-index: -5;
+  }
+  .info__bg-icon--one {
+    top: 14%;
+    width: 20%;
+    animation: rotate-right 160s infinite linear;
+  }
+  .info__bg-icon--two {
+    bottom: 10%;
+    left: 10%;
+    width: 30%;
+    animation: rotate-left 140s infinite linear;
+  }
+  .info__bg-icon--three {
+    top: 26%;
+    left: 16%;
+    width: 50%;
+    animation: rotate-left 160s infinite linear;
+  }
+  .info__bg-icon--four {
+    top: 55%;
+    left: -10%;
+    width: 15%;
+    animation: rotate-right 140s infinite linear;
   }
 }/*# sourceMappingURL=main.css.map */
