--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -1,4 +1,11 @@
 @media (min-width: 992px) {
+	.section-title {
+		font-size: 4.8rem;
+		&::before {
+			height: 4px;
+		}
+	}
+
 	h1.company-name {
 		font-size: 6rem;
 	}
@@ -74,7 +81,7 @@
 				content: '';
 				width: 100%;
 				height: 100%;
-				border: 1px solid c.$main;
+				border: 1px solid c.$detail-darker;
 				opacity: 0;
 			}
 			&:hover::before {
