--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,27 @@ h1.company-name {
 	max-width: 1200px;
 	width: 100%;
 }
+
+.section-title {
+	position: relative;
+	margin: 0 auto 2em;
+	font-size: 3.2rem;
+	color: c.$main;
+	font-weight: 200;
+	width: fit-content;
+	&::before {
+		position: absolute;
+		bottom: -0.1em;
+		left: 0;
+		width: 40px;
+		height: 2px;
+		background-color: c.$main;
+		content: '';
+	}
+	span {
+		font-weight: 600;
+	}
+}
 // HEADER
 .header {
 	display: grid;
@@ -145,7 +166,7 @@ h1.company-name {
 }
 
 .cards {
-	background-color: rgba(178, 178, 215, 0.707);
+	background-color: c.$bgc;
 	overflow: hidden;
 	&__box {
 		display: grid;
@@ -161,12 +182,12 @@ h1.company-name {
 		text-align: center;
 		border: 1px solid transparent;
 		border-radius: 8px;
-		background-color: rgba(120, 112, 168, 0.171);
+		background-color: c.$detail;
 		transition: background-color 0.3s border 0.3s;
 		z-index: 5;
 
 		&:hover {
-			background-color: rgba(74, 88, 130, 0.39);
+			background-color: c.$detail-darker;
 			// border: 1px solid rgb(45, 47, 79);
 			z-index: 1;
 		}
@@ -205,8 +226,51 @@ h1.company-name {
 	}
 }
 
-// MAIN
-// CARDS
+// info
+
+.info {
+	position: relative;
+	display: grid;
+	grid-template-areas: 'title' 'box' 'box';
+	padding: 6em 2em;
+
+	&__title {
+		grid-area: title;
+	}
+	&__boxes {
+		grid-area: box;
+	}
+	&__box-img {
+		width: 100%;
+		object-fit: cover;
+		filter: grayscale(1);
+	}
+	&__box-title {
+		margin: 0.3em 0;
+		font-size: 2.6rem;
+		color: c.$main;
+		font-weight: 400;
+	}
+
+	&__box-text {
+		margin-bottom: 0.5em;
+	}
+	&__bg-icon {
+		display: none;
+	}
+	&__box-link {
+		display: block;
+		margin-bottom: 2em;
+		font-weight: bold;
+		color: c.$main;
+		text-decoration: none;
+		text-align: right;
+		transition: color 0.3s;
+		&:hover {
+			color: c.$detail;
+		}
+	}
+}
 
 @import './large';
 @import './medium';
