--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ h1.company-name {
   position: relative;
   margin: 0 auto 2em;
   font-size: 3.2rem;
-  color: rgba(79, 138, 190, 0.548);
+  color: rgba(79, 138, 190, 0.827);
   font-weight: 200;
   width: -moz-fit-content;
   width: fit-content;
@@ -72,7 +72,7 @@ h1.company-name {
   left: 0;
   width: 40px;
   height: 2px;
-  background-color: rgba(79, 138, 190, 0.548);
+  background-color: rgba(79, 138, 190, 0.827);
   content: "";
 }
 .section-title span {
@@ -174,11 +174,11 @@ h1.company-name {
   color: rgb(21, 20, 20);
 }
 .nav__link:hover {
-  color: rgba(79, 138, 190, 0.548);
+  color: rgba(79, 138, 190, 0.827);
 }
 
 .cards {
-  background-color: rgba(68, 180, 241, 0.467);
+  background-color: rgba(68, 180, 241, 0.637);
   overflow: hidden;
 }
 .cards__box {
@@ -195,12 +195,12 @@ h1.company-name {
   text-align: center;
   border: 1px solid transparent;
   border-radius: 8px;
-  background-color: rgba(149, 138, 214, 0.596);
+  background-color: rgba(150, 138, 214, 0.662);
   transition: background-color 0.3s border 0.3s;
   z-index: 5;
 }
 .cards__card:hover {
-  background-color: rgba(96, 122, 201, 0.595);
+  background-color: rgba(96, 122, 201, 0.814);
   z-index: 1;
 }
 .cards__card::before {
@@ -208,7 +208,7 @@ h1.company-name {
   content: "";
   width: 100%;
   height: 100%;
-  border: 1px solid rgba(79, 138, 190, 0.548);
+  border: 1px solid rgba(79, 138, 190, 0.827);
   border-radius: 8px;
   opacity: 0;
 }
@@ -252,12 +252,12 @@ h1.company-name {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  filter: grayscale(1);
+  filter: grayscale(0.8);
 }
 .info__box-title {
   margin: 0.3em 0;
   font-size: 2.6rem;
-  color: rgba(79, 138, 190, 0.548);
+  color: rgba(79, 138, 190, 0.827);
   font-weight: 400;
 }
 .info__box-text {
@@ -270,13 +270,43 @@ h1.company-name {
   display: block;
   margin-bottom: 2em;
   font-weight: bold;
-  color: rgba(79, 138, 190, 0.548);
+  color: rgba(79, 138, 190, 0.827);
   text-decoration: none;
   text-align: right;
   transition: color 0.3s;
 }
 .info__box-link:hover {
-  color: rgba(149, 138, 214, 0.596);
+  color: rgba(150, 138, 214, 0.662);
+}
+
+.plans {
+  padding: 6em 2em;
+  background-color: rgba(128, 128, 128, 0.378);
+}
+.plans__box {
+  margin: 1em 0;
+  padding: 2em 1em;
+  text-align: center;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  background-color: rgba(79, 138, 190, 0.827);
+  cursor: pointer;
+}
+.plans__box:hover {
+  background-color: rgba(150, 138, 214, 0.662);
+  border: 2px solid rgba(96, 122, 201, 0.814);
+}
+.plans__item {
+  margin: 1em 0;
+}
+.plans__item-icon {
+  width: 50px;
+}
+.plans__item-name {
+  margin-top: 0;
+  margin-bottom: 1.5em;
+  font-size: 1.8rem;
+  color: rgba(96, 122, 201, 0.814);
 }
 
 @media (min-width: 992px) {
@@ -359,7 +389,7 @@ h1.company-name {
     content: "";
     width: 100%;
     height: 100%;
-    border: 1px solid rgba(96, 122, 201, 0.595);
+    border: 1px solid rgba(96, 122, 201, 0.814);
     opacity: 0;
   }
   .nav__link:hover::before {
@@ -391,6 +421,22 @@ h1.company-name {
     grid-row: 1/2;
   }
 }
+.plans {
+  padding: 8em 2em;
+}
+.plans__box {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  align-items: center;
+}
+.plans__item {
+  margin: 0 1em;
+}
+.plans__item-name {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 @media (min-width: 576px) {
   .info {
     grid-template-areas: "title box" "title box" "title box";
