--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ h1.company-name {
   position: relative;
   margin: 0 auto 2em;
   font-size: 3.2rem;
-  color: rgba(79, 138, 190, 0.827);
+  color: rgba(155, 17, 177, 0.658);
   font-weight: 200;
   width: -moz-fit-content;
   width: fit-content;
@@ -72,7 +72,7 @@ h1.company-name {
   left: 0;
   width: 40px;
   height: 2px;
-  background-color: rgba(79, 138, 190, 0.827);
+  background-color: rgba(155, 17, 177, 0.658);
   content: "";
 }
 .section-title span {
@@ -174,11 +174,11 @@ h1.company-name {
   color: rgb(21, 20, 20);
 }
 .nav__link:hover {
-  color: rgba(79, 138, 190, 0.827);
+  color: rgba(155, 17, 177, 0.658);
 }
 
 .cards {
-  background-color: rgba(68, 180, 241, 0.637);
+  background-color: rgba(122, 125, 127, 0.292);
   overflow: hidden;
 }
 .cards__box {
@@ -195,12 +195,12 @@ h1.company-name {
   text-align: center;
   border: 1px solid transparent;
   border-radius: 8px;
-  background-color: rgba(150, 138, 214, 0.662);
+  background-color: rgba(152, 80, 176, 0.525);
   transition: background-color 0.3s border 0.3s;
   z-index: 5;
 }
 .cards__card:hover {
-  background-color: rgba(96, 122, 201, 0.814);
+  background-color: rgba(152, 96, 201, 0.814);
   z-index: 1;
 }
 .cards__card::before {
@@ -208,7 +208,7 @@ h1.company-name {
   content: "";
   width: 100%;
   height: 100%;
-  border: 1px solid rgba(79, 138, 190, 0.827);
+  border: 1px solid rgba(155, 17, 177, 0.658);
   border-radius: 8px;
   opacity: 0;
 }
@@ -240,7 +240,7 @@ h1.company-name {
   position: relative;
   display: grid;
   grid-template-areas: "title" "box" "box";
-  padding: 6em 2em;
+  padding: 3em 2em;
 }
 .info__title {
   grid-area: title;
@@ -255,10 +255,11 @@ h1.company-name {
   filter: grayscale(0.8);
 }
 .info__box-title {
+  padding: 0.5em 0;
   margin: 0.3em 0;
   font-size: 2.6rem;
-  color: rgba(79, 138, 190, 0.827);
-  font-weight: 400;
+  color: rgba(155, 17, 177, 0.658);
+  font-weight: bold;
 }
 .info__box-text {
   margin-bottom: 0.5em;
@@ -270,13 +271,13 @@ h1.company-name {
   display: block;
   margin-bottom: 2em;
   font-weight: bold;
-  color: rgba(79, 138, 190, 0.827);
+  color: rgba(155, 17, 177, 0.658);
   text-decoration: none;
   text-align: right;
   transition: color 0.3s;
 }
 .info__box-link:hover {
-  color: rgba(150, 138, 214, 0.662);
+  color: rgba(152, 80, 176, 0.525);
 }
 
 .plans {
@@ -287,17 +288,21 @@ h1.company-name {
   margin: 1em 0;
   padding: 2em 1em;
   text-align: center;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   border-radius: 8px;
-  background-color: rgba(79, 138, 190, 0.827);
+  background-color: rgba(152, 80, 176, 0.525);
   cursor: pointer;
 }
 .plans__box:hover {
-  background-color: rgba(150, 138, 214, 0.662);
-  border: 2px solid rgba(96, 122, 201, 0.814);
+  border: 2px solid rgba(152, 96, 201, 0.814);
+  color: rgb(170, 40, 202);
+  background-color: darkgray;
 }
 .plans__item {
   margin: 1em 0;
+}
+.plans__item .p-bold {
+  font-weight: bold;
 }
 .plans__item-icon {
   width: 50px;
@@ -306,9 +311,242 @@ h1.company-name {
   margin-top: 0;
   margin-bottom: 1.5em;
   font-size: 1.8rem;
-  color: rgba(96, 122, 201, 0.814);
+  color: black;
 }
 
+.newsletter {
+  padding: 6em 2em;
+  background-color: rgba(121, 121, 121, 0.711);
+  text-align: center;
+}
+.newsletter__text {
+  padding: 1em;
+  margin-bottom: 1em;
+  font-size: 4rem;
+  font-weight: 400;
+}
+.newsletter__form__input {
+  margin-bottom: 1em;
+  padding: 1em;
+  width: 100%;
+  background-color: white;
+  border: 1px solid transparent;
+}
+.newsletter__form__button {
+  padding: 1em;
+  border: 2px solid rgba(152, 96, 201, 0.814);
+  border-radius: 5%;
+  background-color: rgba(152, 80, 176, 0.525);
+  color: black;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+.newsletter__form__button:hover {
+  color: rgb(170, 40, 202);
+  background-color: darkgray;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(2, 8fr);
+}
+.gallery__item {
+  height: 16em;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.gallery__item:nth-child(odd) {
+  display: none;
+}
+
+.contact {
+  padding: 6em 2em;
+  background-color: rgb(194, 193, 193);
+}
+.contact__form {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+}
+.contact__form-box label {
+  display: block;
+  margin-bottom: 0.5em;
+  font-size: 2rem;
+}
+.contact__form-box textarea {
+  max-width: 100%;
+  width: 100%;
+  min-width: 100%;
+}
+.contact__form-box input,
+.contact__form-box textarea {
+  padding: 1em 2em;
+  margin-bottom: 2em;
+  width: 100%;
+  color: rgba(135, 90, 139, 0.582);
+  background: none;
+  border: 2px solid rgb(127, 25, 171);
+}
+.contact__form-box input:focus,
+.contact__form-box textarea:focus {
+  outline: none;
+  border: 1px solid rgb(104, 102, 102);
+}
+.contact__form-box:nth-child(1) {
+  grid-column: 1/-1;
+  grid-row: 1/2;
+}
+.contact__form-box:nth-child(2) {
+  grid-column: 1/-1;
+  grid-row: 2/3;
+}
+.contact__form-box:nth-child(3) {
+  grid-column: 1/-1;
+  grid-row: 3/4;
+}
+.contact__form-btn {
+  grid-column: 1/3;
+  grid-row: 4/5;
+  padding: 1em;
+  border: 2px solid rgb(127, 25, 171);
+  background-color: rgba(152, 80, 176, 0.525);
+  font-weight: bold;
+  color: black;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+.contact__form-btn:hover, .contact__form-btn:focus {
+  outline: none;
+  color: rgb(170, 40, 202);
+  background-color: darkgray;
+}
+
+.footer {
+  padding: 3em 1em;
+  border-top: 1px solid black;
+  text-align: center;
+  background-color: rgb(231, 227, 227);
+}
+
+@media (min-width: 576px) {
+  .info {
+    grid-template-areas: "title box" "title box" "title box";
+    padding: 6em 2em;
+  }
+  .info__box {
+    display: grid;
+    justify-content: end;
+  }
+  .info__title {
+    padding: 0 1em;
+  }
+  .info__box-img, .info__box-text {
+    max-width: 500px;
+  }
+  .info__bg-icon {
+    position: absolute;
+    display: block;
+    opacity: 0.05;
+    z-index: -5;
+  }
+  .info__bg-icon--one {
+    top: 14%;
+    width: 20%;
+    animation: rotate-right 160s infinite linear;
+  }
+  .info__bg-icon--two {
+    bottom: 10%;
+    left: 10%;
+    width: 30%;
+    animation: rotate-left 140s infinite linear;
+  }
+  .info__bg-icon--three {
+    top: 26%;
+    left: 16%;
+    width: 50%;
+    animation: rotate-left 160s infinite linear;
+  }
+  .info__bg-icon--four {
+    top: 55%;
+    left: -10%;
+    width: 15%;
+    animation: rotate-right 140s infinite linear;
+  }
+}
+@media (min-width: 768px) {
+  .cards__box {
+    padding: 6em 2em;
+  }
+  .cards__card--one {
+    grid-column: 1/4;
+    grid-row: 1/2;
+  }
+  .cards__card--two {
+    grid-column: 4/7;
+    grid-row: 1/2;
+  }
+  .cards__card--three {
+    grid-column: 7/10;
+    grid-row: 1/2;
+  }
+  .plans {
+    padding: 8em 2em;
+  }
+  .plans__box {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    align-items: center;
+  }
+  .plans__item {
+    margin: 0 1em;
+  }
+  .plans__item-name {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .newsletter__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+  }
+  .newsletter__text {
+    margin-bottom: 0;
+  }
+  .newsletter__form {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 2em;
+  }
+  .newsletter__form__input {
+    margin-bottom: 0;
+  }
+  .gallery {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .gallery__item:nth-child(odd) {
+    display: block;
+  }
+  .contact__form {
+    gap: 1em;
+  }
+  .contact__form-box:nth-child(1) {
+    grid-column: 1/4;
+    grid-row: 1/2;
+  }
+  .contact__form-box:nth-child(2) {
+    grid-column: 4/7;
+    grid-row: 1/2;
+  }
+  .contact__form-box:nth-child(3) {
+    grid-column: 1/-1;
+    grid-row: 2/3;
+  }
+  .contact__form-btn {
+    grid-row: 3/4;
+  }
+}
 @media (min-width: 992px) {
   .section-title {
     font-size: 4.8rem;
@@ -389,7 +627,7 @@ h1.company-name {
     content: "";
     width: 100%;
     height: 100%;
-    border: 1px solid rgba(96, 122, 201, 0.814);
+    border: 1px solid rgba(152, 96, 201, 0.814);
     opacity: 0;
   }
   .nav__link:hover::before {
@@ -403,81 +641,7 @@ h1.company-name {
   .header__text p {
     font-size: 2.2rem;
   }
-}
-@media (min-width: 768px) {
-  .cards__box {
-    padding: 10em 2em;
-  }
-  .cards__card--one {
-    grid-column: 1/4;
-    grid-row: 1/2;
-  }
-  .cards__card--two {
-    grid-column: 4/7;
-    grid-row: 1/2;
-  }
-  .cards__card--three {
-    grid-column: 7/10;
-    grid-row: 1/2;
-  }
-  .plans {
-    padding: 8em 2em;
-  }
-  .plans__box {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    align-items: center;
-  }
-  .plans__item {
-    margin: 0 1em;
-  }
-  .plans__item-name {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-}
-@media (min-width: 576px) {
-  .info {
-    grid-template-areas: "title box" "title box" "title box";
-    padding: 10em 2em;
-  }
-  .info__box {
-    display: grid;
-    justify-content: end;
-  }
-  .info__title {
-    padding: 0 1em;
-  }
-  .info__box-img, .info__box-text {
-    max-width: 500px;
-  }
-  .info__bg-icon {
-    position: absolute;
-    display: block;
-    opacity: 0.05;
-    z-index: -5;
-  }
-  .info__bg-icon--one {
-    top: 14%;
-    width: 20%;
-    animation: rotate-right 160s infinite linear;
-  }
-  .info__bg-icon--two {
-    bottom: 10%;
-    left: 10%;
-    width: 30%;
-    animation: rotate-left 140s infinite linear;
-  }
-  .info__bg-icon--three {
-    top: 26%;
-    left: 16%;
-    width: 50%;
-    animation: rotate-left 160s infinite linear;
-  }
-  .info__bg-icon--four {
-    top: 55%;
-    left: -10%;
-    width: 15%;
-    animation: rotate-right 140s infinite linear;
+  .gallery {
+    grid-template-columns: repeat(8, 1fr);
   }
 }/*# sourceMappingURL=main.css.map */
